[package]
name = "our-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "myrustlib"
# crate-type = ["dylib"]

[dependencies]
lazy_static = "*"
tokio = {version = "1.4", features = ["full"]}

# [dependencies.cpython]
# version = "*"
# features = ["extension-module"]

[features] 